syntax = "proto3";

package v1;

option java_package = "co.com.bancodebogota.number.generation.grpc";
option java_multiple_files = true;

service NumberGeneration {
  // Unary
  rpc GeneratedNumbers (GeneratedNumbersRequest) returns (GeneratedNumbersResponse) {}
  // Server Streaming
  rpc GeneratedMultipleSecureRandom (GeneratedMultipleSecureRandomRequest) returns (stream GeneratedMultipleSecureRandomResponse) {}
}

message GeneratedNumbersRequest {
  int32 min_range = 1;
  int32 max_range = 2;
  string request_id = 3;
}

message GeneratedNumbersResponse {
  int32 random_with_next_int = 1;
  int32 random_with_thread_local_random = 2;
  int32 random_with_secure_random = 3;
}

message GeneratedMultipleSecureRandomRequest {
  string request_id = 1;
}

message GeneratedMultipleSecureRandomResponse {
  int32 random_with_secure_random = 1;
}
